# TP_Reseau_1

./: README.md
Client/: CMakeLists.txt
Client/Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Client/NetworkLib/: Connection.h  ConnectionTCP.cpp  ConnectionUDP.cpp  ConnectionUDP.h  NetworkLib.cpp  NetworkLib.h
NetworkLib/: CMakeLists.txt
NetworkLib/Client/: CMakeLists.txt  Client.cpp
NetworkLib/ClientServer/: CMakeLists.txt  ClientServer.cpp
NetworkLib/NetworkLib/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionTCP.cpp  ConnectionTCP.h  ConnectionUDP.cpp  ConnectionUDP.h  NetworkLib.cpp  NetworkLib.h  Terminal.cpp  Terminal.h
NetworkLib/Server/: CMakeLists.txt  Server.cpp
Server/: CMakeLists.txt
Server/Server/: CMakeLists.txt  Server.cpp
Server/Server/NetworkLib/: Connection.h  ConnectionTCP.cpp  ConnectionUDP.cpp  ConnectionUDP.h  NetworkLib.cpp  NetworkLib.h
